# Husher

./: .gitmodules
Desktop/Hush/: .gitignore  .gitmodules  ABLETON_INSTALL_GUIDE.md  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_clap.txt  CMakeLists_original.txt  CMakeLists_simple.txt  CONTRIBUTING.md  README.md  build.bat  build.sh  deploy_to_github.sh  install_for_ableton.sh  simple_ui_demo
Desktop/Hush/.github/: pull_request_template.md  sanitizer-suppressions.txt
Desktop/Hush/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Desktop/Hush/.github/workflows/: build-and-package.yml  build.yml  ci-sanitizers.yml
Desktop/Hush/build_clap/: CMakeLists.txt  clap_demo
Desktop/Hush/build_clap/KhDetector_CLAP.clap/Contents/: Info.plist
Desktop/Hush/build_clap/KhDetector_CLAP.clap/Contents/MacOS/: KhDetector_CLAP
Desktop/Hush/clap/: kh_detector.cc  kh_detector_simple.cc
Desktop/Hush/cmake/: Info.plist.in
Desktop/Hush/examples/: clap_demo.cpp  decimation_demo.cpp  midi_demo.cpp  opengl_gui_demo.cpp  postprocessor_demo.cpp  resizable_ui_demo.cpp  ring_buffer_demo.cpp  simple_ui_demo.cpp  threadpool_demo.cpp  waveform_demo.cpp
Desktop/Hush/scripts/: README.md  create-dmg-simple.sh  create-dmg.sh  create-mac-standard-dmg.sh  create-professional-dmg-fixed.sh  create-professional-dmg.sh  create-simple-professional-dmg.sh  create-vst3-simple.sh  fix-ableton-install.sh  package-macos.sh  package-windows.ps1  test-packaging.sh
Desktop/Hush/src/: AiInference.cpp  AiInference.h  KhDetectorController.cpp  KhDetectorController.h  KhDetectorEditor.cpp  KhDetectorEditor.h  KhDetectorFactory.cpp  KhDetectorGUIView.cpp  KhDetectorGUIView.h  KhDetectorOpenGLView.cpp  KhDetectorOpenGLView.h  KhDetectorProcessor.cpp  KhDetectorProcessor.h  KhDetectorVersion.h  MidiEventHandler.cpp  MidiEventHandler.h  PolyphaseDecimator.h  PostProcessor.cpp  PostProcessor.h  RealtimeThreadPool.cpp  RealtimeThreadPool.h  RingBuffer.h  WaveformData.cpp  WaveformData.h  WaveformRenderer.cpp  WaveformRenderer.h
Desktop/Hush/tests/: README_resampler_tests.md  test_decimator.cpp  test_midieventhandler.cpp  test_openglgui.cpp  test_postprocessor.cpp  test_resizable_ui.cpp  test_ringbuffer.cpp  test_threadpool.cpp
Documents/Repos/Husher/: CMakeLists.txt  README.md  VERSION_1.0_SUMMARY.md
Documents/Repos/Husher/Source/: AudioRecordingBuffer.cpp  AudioRecordingBuffer.h  HebrewDetector.cpp  HebrewDetector.h  ONNXInterface.cpp  ONNXInterface.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RealtimeInferenceEngine.cpp  RealtimeInferenceEngine.h  WaveformVisualization.cpp  WaveformVisualization.h
Documents/Repos/Husher/training/: README.md  dataset_info.md  download_datasets.py  preprocess_audio.py  requirements.txt  train_het_detector.py
